--- a/app/views/surveys/_question_fields.html.haml
+++ b/app/views/surveys/_question_fields.html.haml
@@ -1,7 +1,7 @@
 .nested-fields
   = f.input :question
   = f.input :question_type, collection: [['Paragraph', 'paragraph'], ['Multiple choice', 'option']], input_html: {class: 'form-select', id: 'question-type'}
-  #question-options.invisible
+  #question-options.d-none
     = f.simple_fields_for :question_options do |option|
       = render 'question_option_fields', f: option
     .links
