--- a/app/views/surveys/index.html.haml
+++ b/app/views/surveys/index.html.haml
@@ -9,11 +9,13 @@
               %th Name
               %th Description
               %th Questions
+              %th
           %tbody
             - @surveys.each do |survey|
               %tr
                 %td=survey.title
                 %td=survey.description
                 %td=survey.questions.length
+                %td=link_to 'Start Survey', new_survey_answers_path(survey)
         %p
           = link_to "New Survey", new_survey_path, class: 'btn btn-primary'
