--- a/app/views/surveys/index.html.haml
+++ b/app/views/surveys/index.html.haml
@@ -2,6 +2,7 @@
   %section.py-5.text-center.container
     .row.py-lg-5
       .col-lg-6.col-md-8.mx-auto
+        = link_to "Answers" ,answers_path, class: 'btn btn-primary'
         %h1.fw-light Surveys
         %table.table-striped.table
           %thead
