--- a/app/views/answers/index.html.haml
+++ b/app/views/answers/index.html.haml
@@ -13,10 +13,11 @@
               %th Question Type
           %tbody
             - @questions.each do |question|
-              %tr
-                %td=question.survey.title
-                %td=question.question
-                %td=question.answers.count
-                %td=question.question_type
+              -if question.answers.count >= 1
+                %tr
+                  %td=question.survey.title
+                  %td=question.question
+                  %td=question.answers.count
+                  %td=question.question_type
         %p
           = link_to "New Survey", new_survey_path, class: 'btn btn-primary'
